# underwater_image_enhancer

./: .gitignore  README.md  app.py  create_video.py  diffusion.py  infer.py  prompter.py  pyproject.toml  requirement.txt  video_processor.py
Prompter/: predict.py
Prompter/models/: instructir.py  nafnet.py
Upscaler/: predict.py
Upscaler/hat/: version.py
Upscaler/hat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Upscaler/options/test/: HAT_GAN_Real_SRx4.yml  HAT_GAN_Real_SRx4T.yml  HAT_SRx4_ImageNet-LR.yml
config/: underwater.json  underwater_video.json
core/: logger.py
